<resources>
    <string name="app_name">Shopping List</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="company_logo">Company Logo</string>
    <string name="log_out">Log Out</string>
    <string name="choose_shop">Choose Shop</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="name">Name</string>
    <string name="enter_password">Enter password</string>
    <string name="renter_password">Renter password</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="enter_a_username">Enter a Username</string>
    <string name="create_user">Create User</string>
    <string name="add_image_to_new_item">Add image to new item</string>
    <string name="product_name">Product name ...</string>
    <string name="dollar_sign">$</string>
    <string name="enter_the_price">Enter the price ...</string>
    <string name="submit">Submit</string>
    <string name="add_item">Add Item</string>
    <string name="title_activity_maps">Map</string>
</resources>
