<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateUser">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/create_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="14"
            android:inputType="textPersonName"
            android:autofillHints="Enter a Username"
            android:hint="@string/enter_a_username"/>

        <EditText
            android:id="@+id/createEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:ems="14"
            android:inputType="textEmailAddress"
            android:autofillHints="Enter email address"
            android:hint="@string/enter_email_address"/>

        <EditText
            android:id="@+id/createPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:ems="14"
            android:inputType="textPassword"
            app:layout_constraintTop_toTopOf="@id/createEmail"
            android:autofillHints="Enter password"
            android:hint="@string/enter_password"/>

        <EditText
            android:id="@+id/createPasswordVerify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:ems="14"
            android:inputType="textPassword"
            app:layout_constraintTop_toTopOf="@id/createPassword"
            android:autofillHints="Confirm password"
            android:hint="@string/renter_password"/>
    </LinearLayout>

    <Button
        android:id="@+id/createUserButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/create_user"
        android:background="@color/colorPrimary"
        android:textColor="#FFFFFF"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>